--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.24",
+    "expo-blur": "~14.0.1",
+    "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.16",
