--- a/app/.gitignore
+++ b/app/.gitignore
@@ -67,3 +67,8 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+firebaseconfig.tsx
+firestore.indexes.json
+storage.rules
+firebase.json
