--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+.firebaseconfig.tsx
+.firestore.indexes.json
+.storage.rules
+.firebase.json
+.package-lock.json
+.package.json
+.tsconfig.json
